--- a/css/grid.css
+++ b/css/grid.css
@@ -1,20 +1,21 @@
 .grid-container {
   display: grid;
-  grid-template-columns: 5fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  gap: 15px 15px;
+  justify-content: center;
+  /* grid-template-columns: 5fr 1fr 1fr 1fr 1fr 1fr 1fr; */
+  /* grid-template-columns: repeat(5, 1fr); */
+  grid-template-rows: 5fr repeat(9, 1fr);
+  gap: 20px 20px;
   grid-auto-flow: row;
   grid-template-areas:
-    "canvas-container . txt-input txt-input txt-input txt-input txt-input"
-    "canvas-container . . up-down plus-line delete-container ."
-    "canvas-container . font-enlarge-containeer txt-mimizer-container align-left-cont align-center-cont align-right-cont"
-    "canvas-container . font-select-cont font-select-cont font-select-cont outline-cont ."
-    "canvas-container . stickers-container stickers-container stickers-container stickers-container stickers-container"
-    "canvas-container . stickers-container stickers-container stickers-container stickers-container stickers-container"
-    "canvas-container . . . . share share";
-
-  /* align-items: center;
-  justify-items: center; */
+    "canvas-container canvas-container canvas-container canvas-container canvas-container "
+    "txt-input txt-input txt-input txt-input txt-input"
+    ". up-down plus-line delete-container ."
+    "font-enlarge-containeer txt-mimizer-container align-left-cont align-center-cont align-right-cont"
+    "font-select-cont font-select-cont font-select-cont outline-cont color-cont"
+    "stickers-container stickers-container stickers-container stickers-container stickers-container"
+    "stickers-container stickers-container stickers-container stickers-container stickers-container"
+    ". share share share .";
+  background-color: var(--clr6);
 }
 
 .canvas-container {
@@ -61,6 +62,10 @@
   grid-area: outline-cont;
 }
 
+.color-cont {
+  grid-area: color-cont;
+}
+
 .font-select-cont {
   grid-area: font-select-cont;
 }
@@ -75,10 +80,71 @@
 
 .grid-container > .txt-input > * {
   width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  font-family: lato;
+  font-size: 40px;
+  text-align: center;
+}
+
+.grid-container .font-select-cont > * {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  font-family: lato;
+  font-size: 40px;
+  text-align: center;
 }
 
 .grid-container button {
   width: 100%;
   height: 100%;
   border-radius: 5px;
+  background-color: white;
+}
+
+.outine-color {
+  height: 100%;
+  width: 100%;
+  position: float;
+  /* opacity: 0%; */
+}
+
+@media (min-width: 640px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 5px 10px;
+    grid-template-areas:
+      "canvas-container txt-input txt-input txt-input txt-input txt-input"
+      "canvas-container . up-down plus-line delete-container ."
+      "canvas-container font-enlarge-containeer txt-mimizer-container align-left-cont align-center-cont align-right-cont"
+      "canvas-container font-select-cont font-select-cont font-select-cont outline-cont color-cont"
+      "canvas-container stickers-container stickers-container stickers-container stickers-container stickers-container"
+      "canvas-container stickers-container stickers-container stickers-container stickers-container stickers-container"
+      "canvas-container . . . share share";
+  }
+}
+
+@media (min-width: 880px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: 5fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    /* grid-template-columns: 1fr repeat(6, 1fr); */
+    grid-template-rows: repeat(8, 1fr);
+    gap: 20px 20px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      " . . . . . . . ."
+      "canvas-container . txt-input txt-input txt-input txt-input txt-input."
+      "canvas-container . . up-down plus-line delete-container . ."
+      "canvas-container . font-enlarge-containeer txt-mimizer-container align-left-cont align-center-cont align-right-cont ."
+      "canvas-container . font-select-cont font-select-cont font-select-cont outline-cont . ."
+      "canvas-container . stickers-container stickers-container stickers-container stickers-container stickers-container ."
+      "canvas-container . stickers-container stickers-container stickers-container stickers-container stickers-container ."
+      "canvas-container . . . . share share .";
+
+    background-color: var(--clr6);
+  }
 }
