--- a/css/gallery.css
+++ b/css/gallery.css
@@ -10,7 +10,7 @@
   min-height: 5em;
 
   grid-template-columns: repeat(auto-fit, minmax(10em, 1fr));
-  font-family: lato;
+  font-family: Helvetica;
   text-align: center;
   align-items: center;
 }
@@ -30,7 +30,6 @@
 }
 
 .gallary-view .img-container {
-  background-color: black;
   overflow: hidden;
 }
 
@@ -40,6 +39,13 @@
 
 .gallary-view img:hover {
   cursor: pointer;
-  opacity: 0.2;
+  filter: brightness(40%);
   transform: scale(1.1);
+}
+
+.gallary-view button {
+  width: 100%;
+  height: 99%;
+  font-size: 20px;
+  background-color: #fe6e20;
 }
