--- a/css/grid.css
+++ b/css/grid.css
@@ -9,6 +9,7 @@
   gap: 20px 20px;
   grid-auto-flow: row;
   grid-template-areas:
+    ". . . . ."
     "canvas-container canvas-container canvas-container canvas-container canvas-container "
     "txt-input txt-input txt-input txt-input txt-input"
     ". up-down plus-line delete-container ."
